--- a/_output.yml
+++ b/_output.yml
@@ -1,12 +1,13 @@
 bookdown::gitbook:
+  split_by: section
   css: style.css
   config:
     toc:
       before: |
-        <li><a href="https://zhilongjia.github.io/NWU/">西北大学校园网络植物志</a></li>
+        <li><a href="http://zhilongjia.gitee.io/nwu">西北大学校园网络植物志</a></li>
       after: |
         <li><a href="https://github.com/rstudio/bookdown" target="blank">Published with bookdown</a></li>
-    edit: https://github.com/zhilongjia/NWU/edit/master/%s
+    edit: https://gitee.com/zhilongjia/NWU/edit/master/%s
 bookdown::pdf_book:
   includes:
     in_header: preamble.tex
